# DigitalCow

./: .gitignore  DairyState.py  DigitalCow.py  DigitalCowFacade.py  DigitalHerd.py  LICENSE  README.md  State.py  main.ipynb  main.py  mmmooogle_parser.py  probability.py  setup.cfg
_build/: genindex.html  index.html  objects.inv  searchindex.js
_build/.doctrees/: environment.pickle
docs/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
docsource/source/: conf.py  index.rst
documentation/source/: api.rst  index.rst
plotting_modules/: body_weight_test.py  dmi_test.py  milk_production_test.py  nitrogen_test.py
src/cow_builder/: digital_cow.py  digital_herd.py  state.py
transition_matrices/: transition_matrix_2_lactations.npz  transition_matrix_5_lactations.npz  transition_matrix_9_lactations.npz
