[metadata]
name = cow-builder
version = 0.0.1

[options]
install_requires =
    chain-simulator @ git+https://github.com/Bovi-analytics/DigitalCowSimulationPlatform@main
    numpy
    networkx
packages = find:

[options.packages.find]
where=src
include=cow_builder*

[options.extras_require]
dev =
    sphinx
    furo