[metadata]
name = cow-builder
version = 1.0.0

[options]
install_requires =
    chain-simulator[gpu] @ git+https://github.com/Bovi-analytics/chain-simulator@main
    numpy
packages = find:

[options.packages.find]
where=src
include=cow_builder*

[options.extras_require]
dev =
    sphinx
    furo
    jupyter
visualisation =
    matplotlib
    jupyter